# FrequentItemset

./: .gitignore  CMakeLists.txt  README.txt  apriori.cpp  apriori.h  apriori.py  apriori_test.cpp  basket_set.h  basket_set2.h  basket_set_test.cpp  basket_set_test2.cpp  data_sort.py  fetch_dependencies.sh  fi.h  fi_test.cpp  freqpairs.py  mushroom.cpp  timing.h  trie.h
